--- a/OdbDesignServer/templates/helloworld.html
+++ b/OdbDesignServer/templates/helloworld.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-  <p>Hello World!</p>
+    <p>Hello {{design}}!</p> <!-- in mustache define a simple variable -->
   </body>
 </html>
